chore: tgi examples update

--- a/notebooks/tgi_examples/demo.ipynb
+++ b/notebooks/tgi_examples/demo.ipynb
@@ -9,17 +9,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: LOG_LEVEL=DEBUG\n"
+      "env: LOG_LEVEL=INFO\n"
      ]
     }
    ],
    "source": [
-    "%env LOG_LEVEL=DEBUG"
+    "%env LOG_LEVEL=INFO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you have used `python setup.py install`, skip this cell.\n",
+    "# If you plan to debug from source code, first run `pip uninstall guidance``, then run this cell.\n",
+    "import sys\n",
+    "sys.path.insert(0,\"/home/zt/workspace/guidance-tgi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,39 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "template = format_output()\n",
-    "input_template = \"{{description}}\" + template"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "guidance.llms.default_system_prompt = str(\n",
-    "    '数据库的信息如下所示:\\n{\"db_name\": \"course_teach\", \"db_info\": {\"course\": {\"categorical_info\": {\"Staring_Date\": [\"10 May\", \"11 May\", \"13 May\", \"14 May\", \"15 May\"], \"Course\": [\"Bible\", \"French\", \"Geography\", \"Health\", \"History\"]}, \"numeric_info\": {\"Course_ID\": [1, 5, 10]}, \"date_cols_info\": {}}, \"teacher\": {\"categorical_info\": {\"Name\": [\"Anne Walker\", \"Gustaaf Deloor\", \"John Deloor\", \"Joseph Huts\", \"Kearsley Brown\"], \"Age\": [\"26\", \"29\", \"32\", \"33\", \"39\"], \"Hometown\": [\"Blackrod Urban District\", \"Bolton County Borough\", \"Farnworth Municipal Borough\", \"Horwich Urban District\", \"Kearsley Urban District\"]}, \"numeric_info\": {\"Teacher_ID\": [1, 4, 7]}, \"date_cols_info\": {}}, \"course_arrange\": {\"categorical_info\": {}, \"numeric_info\": {\"Course_ID\": [2, 3, 10], \"Teacher_ID\": [2, 5, 7], \"Grade\": [1, 3, 7]}, \"date_cols_info\": {}}}, \"foreign_keys\": [[[\"course_arrange\", \"Teacher_ID\"], [\"teacher\", \"Teacher_ID\"]], [[\"course_arrange\", \"Course_ID\"], [\"course\", \"Course_ID\"]]]}\\n\"db_info\"中的key为表名; \"numeric_info\"表示连续列的信息; \"categorical_info\"表示离散列的信息,\"date_cols_info\"表示时间列的信息. \"foreign_keys\"表示数据库多表之间的连接关系. 根据数据库信息以及用户的输入生成符合json格式输出的指令.\\n\\n'\n",
-    ")"
+    "plot_types = [\"Area\",\"Bar\",\"Line\",\"Barh\",\"Box\",\"Density\",\"Hist\",\"Pie\",\"Scatter\"]\n",
+    "template = format_output()\n",
+    "input_template = \"{{system}}USER: {{description}} ASSISTANT:\" + template"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from guidance.llms import TGIModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,18 +87,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import importlib\n",
+    "# importlib.reload(guidance)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = TGIModel(config=AutoConfig.from_pretrained(model_path))\n",
-    "\n",
-    "guidance.llm = guidance.llms.Transformers(model=model, tokenizer=tokenizer,tgi=True)"
+    "from guidance.llms import TGIModel"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = TGIModel(config=AutoConfig.from_pretrained(model_path))\n",
+    "\n",
+    "guidance.llm = guidance.llms.Transformers(model=model, plot_type=plot_types, tokenizer=tokenizer,tgi=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,50 +127,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-11-08 16:29:44,687 - 140089001202112 - _transformers.py-_transformers:1084 - DEBUG: input prompt: course这张表数据共有多少行?[{\"input\": [ \n",
-      " generate args :{'stop_sequences': [']', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 500, 'do_sample': True}\n",
-      "2023-11-08 16:29:44,687 - 140089001202112 - _model.py-_model:22 - DEBUG: input prompt :course这张表数据共有多少行?[{\"input\": [,kwargs:{'stop_sequences': [']', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 500, 'do_sample': True}\n",
-      "2023-11-08 16:29:45,090 - 140089001202112 - _transformers.py-_transformers:1087 - DEBUG: output text:  {\"input\": [\"df_groupby_agg_0\"]\n",
-      "2023-11-08 16:29:45,092 - 140089001202112 - _transformers.py-_transformers:1084 - DEBUG: input prompt: course这张表数据共有多少行?[{\"input\": [{\"input\": [\"df_groupby_agg_0\"],\"command\": \" \n",
-      " generate args :{'stop_sequences': ['\",', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 500, 'do_sample': True}\n",
-      "2023-11-08 16:29:45,092 - 140089001202112 - _model.py-_model:22 - DEBUG: input prompt :course这张表数据共有多少行?[{\"input\": [{\"input\": [\"df_groupby_agg_0\"],\"command\": \",kwargs:{'stop_sequences': ['\",', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 500, 'do_sample': True}\n",
-      "2023-11-08 16:29:45,216 - 140089001202112 - _transformers.py-_transformers:1087 - DEBUG: output text:  Shape\",\n",
-      "2023-11-08 16:29:45,218 - 140089001202112 - _transformers.py-_transformers:1084 - DEBUG: input prompt: course这张表数据共有多少行?[{\"input\": [{\"input\": [\"df_groupby_agg_0\"],\"command\": \"Shape\",\"output\": [ \n",
-      " generate args :{'stop_sequences': [']', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 500, 'do_sample': True}\n",
-      "2023-11-08 16:29:45,219 - 140089001202112 - _model.py-_model:22 - DEBUG: input prompt :course这张表数据共有多少行?[{\"input\": [{\"input\": [\"df_groupby_agg_0\"],\"command\": \"Shape\",\"output\": [,kwargs:{'stop_sequences': [']', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 500, 'do_sample': True}\n",
-      "2023-11-08 16:29:46,233 - 140089001202112 - _transformers.py-_transformers:1087 - DEBUG: output text:  {\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}, {\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}]\n",
-      "2023-11-08 16:29:46,234 - 140089001202112 - _transformers.py-_transformers:1084 - DEBUG: input prompt: course这张表数据共有多少行?[{\"input\": [{\"input\": [\"df_groupby_agg_0\"],\"command\": \"Shape\",\"output\": [{\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}, {\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}]} \n",
-      " generate args :{'stop_sequences': ['],', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 4}\n",
-      "2023-11-08 16:29:46,234 - 140089001202112 - _model.py-_model:22 - DEBUG: input prompt :course这张表数据共有多少行?[{\"input\": [{\"input\": [\"df_groupby_agg_0\"],\"command\": \"Shape\",\"output\": [{\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}, {\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}]},kwargs:{'stop_sequences': ['],', '</s>'], 'temperature': 0.01, 'top_p': 0.9, 'max_new_tokens': 4}\n",
-      "2023-11-08 16:29:46,332 - 140089001202112 - _transformers.py-_transformers:1087 - DEBUG: output text:  ],\n"
+      "CPU times: user 446 ms, sys: 15.7 ms, total: 462 ms\n",
+      "Wall time: 5.43 s\n"
      ]
     }
    ],
    "source": [
-    "#guidance.llms.cache.clear()\n",
-    "# out = character_maker(description=\"对不同的Staring_Date，将11 May值映射为各Staring_Date的平均数计算。\",silent=True,log=True, temperature=0.01)\n",
-    "out = character_maker(description=\"course这张表数据共有多少行?\",silent=True,log=True, temperature=0.01)"
+    "%%time\n",
+    "system = \"Now that you are a data analyst. Your job is to answer questions about a database. You are given a question and context regarding one or more tables.\\nThe database information is as follows:\\nDatabase Name: Standard_parameters\\n\\nTable Name0: \\\"Standard_parameters\\\"\\nTable Data0 is as follows:\\nCREATE TABLE \\\"Standard_parameters\\\" (\\\"Region\\\" ENUM(\\\"Austria (BEV)\\\", \\\"England , Scotland , Wales\\\", \\\"Germany\\\", \\\"Ireland\\\", \\\"Slovenia ETRS89\\\"), \\\"Start datum\\\" ENUM(\\\"D48\\\", \\\"WGS84\\\"), \\\"Target datum\\\" ENUM(\\\"Bessel 1841\\\", \\\"D96\\\", \\\"DHDN\\\", \\\"Ireland 1965\\\", \\\"Krassovski 1940\\\", \\\"MGI\\\", \\\"OSGB36\\\"), \\\"c_x ( Metre )\\\" ENUM(\\\"409.545\\\", \\\"−24\\\", \\\"−446.448\\\", \\\"−482.53\\\", \\\"−577.326\\\", \\\"−582\\\", \\\"−591.28\\\"), \\\"c_y (Metre)\\\" ENUM(\\\"123\\\", \\\"125.157\\\", \\\"130.596\\\", \\\"72.164\\\", \\\"−105\\\", \\\"−81.35\\\", \\\"−90.129\\\"), \\\"c_z (Metre)\\\" ENUM(\\\"486.872\\\", \\\"94\\\", \\\"−396.39\\\", \\\"−414\\\", \\\"−463.920\\\", \\\"−542.06\\\", \\\"−564.557\\\"), \\\"s ( ppm )\\\" ENUM(\\\"17.919665\\\", \\\"20.4894\\\", \\\"−1.1\\\", \\\"−2.423\\\", \\\"−8.15\\\", \\\"−8.3\\\", \\\"−9.82\\\"), \\\"r x ( Arcsecond )\\\" ENUM(\\\"1.042\\\", \\\"1.4770\\\", \\\"5.137\\\", \\\"−0.02\\\", \\\"−0.1502\\\", \\\"−1.04\\\", \\\"−3.085957\\\"), \\\"r y ( Arcsecond )\\\" ENUM(\\\"0.214\\\", \\\"0.26\\\", \\\"1.474\\\", \\\"−0.0736\\\", \\\"−0.247\\\", \\\"−0.35\\\", \\\"−5.469110\\\"), \\\"r z ( Arcsecond )\\\" ENUM(\\\"0.13\\\", \\\"0.631\\\", \\\"11.020289\\\", \\\"3.08\\\", \\\"5.297\\\", \\\"−0.8421\\\", \\\"−1.4580\\\"));\\n\\nDatabase Connection Relationships: []\\n\\n\\n\"\n",
+    "\n",
+    "description = \"绘制一个直方图，其中x轴为c_x ( Metre )\"\n",
+    "\n",
+    "out = character_maker(system=system, description=description,silent=True,log=True, temperature=0.01)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'course这张表数据共有多少行?[{\"input\": [{\"input\": [\"df_groupby_agg_0\"],\"command\": \"Shape\",\"output\": [{\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}, {\"columns\": \"null\", \"index\": \"null\", \"type\": \"row\"}]}]'"
+       "'Now that you are a data analyst. Your job is to answer questions about a database. You are given a question and context regarding one or more tables.\\nThe database information is as follows:\\nDatabase Name: Standard_parameters\\n\\nTable Name0: \"Standard_parameters\"\\nTable Data0 is as follows:\\nCREATE TABLE \"Standard_parameters\" (\"Region\" ENUM(\"Austria (BEV)\", \"England , Scotland , Wales\", \"Germany\", \"Ireland\", \"Slovenia ETRS89\"), \"Start datum\" ENUM(\"D48\", \"WGS84\"), \"Target datum\" ENUM(\"Bessel 1841\", \"D96\", \"DHDN\", \"Ireland 1965\", \"Krassovski 1940\", \"MGI\", \"OSGB36\"), \"c_x ( Metre )\" ENUM(\"409.545\", \"−24\", \"−446.448\", \"−482.53\", \"−577.326\", \"−582\", \"−591.28\"), \"c_y (Metre)\" ENUM(\"123\", \"125.157\", \"130.596\", \"72.164\", \"−105\", \"−81.35\", \"−90.129\"), \"c_z (Metre)\" ENUM(\"486.872\", \"94\", \"−396.39\", \"−414\", \"−463.920\", \"−542.06\", \"−564.557\"), \"s ( ppm )\" ENUM(\"17.919665\", \"20.4894\", \"−1.1\", \"−2.423\", \"−8.15\", \"−8.3\", \"−9.82\"), \"r x ( Arcsecond )\" ENUM(\"1.042\", \"1.4770\", \"5.137\", \"−0.02\", \"−0.1502\", \"−1.04\", \"−3.085957\"), \"r y ( Arcsecond )\" ENUM(\"0.214\", \"0.26\", \"1.474\", \"−0.0736\", \"−0.247\", \"−0.35\", \"−5.469110\"), \"r z ( Arcsecond )\" ENUM(\"0.13\", \"0.631\", \"11.020289\", \"3.08\", \"5.297\", \"−0.8421\", \"−1.4580\"));\\n\\nDatabase Connection Relationships: []\\n\\n\\nUSER: 绘制一个直方图，其中x轴为c_x ( Metre ) ASSISTANT:[{\"input\": [\"Standard_parameters\"],\"command\": \"Hist\",\"command_args\": {\"x\": [\"c_x ( Metre )\"],\"y\": \"null\", \"transpose\": false},\"output\": []}]'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,11 +167,6 @@
    "source": [
     "out.text"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
