Doing some work on the tutorial
- Refactor the OpenAI class to use mixins
- Add an AzureOpenAI class for use with Azure OpenAI endpoints
- Tweak tutorial notebook
- Add tutorial_azureai_openai notebook (with Entra/AAD Auth)
- Add a couple of smoke tests of the AzureAI code

This contains significant contributions from dfredriksenkbr

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -27,7 +27,11 @@
    "source": [
     "from guidance import models\n",
     "\n",
+    "# For LlamaCpp, you need to provide the path on disk to a .gguf model\n",
+    "# A sample model can be downloaded from\n",
+    "# https://huggingface.co/TheBloke/Llama-2-7B-GGUF/blob/main/llama-2-7b.Q5_K_M.gguf\n",
     "llama2 = models.LlamaCpp(\"/models/llama-2-13b.Q5_K_S.gguf\", n_gpu_layers=-1, n_ctx=4096)\n",
+    "\n",
     "#llama2 = models.Transformers(\"meta-llama/Llama-2-7b-hf\")\n",
     "#gpt3 = models.OpenAI(\"text-davinci-003\")\n",
     "#palm2 = models.VertexAI(\"text-bison@001\")"
@@ -589,7 +593,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "guidance",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -605,7 +609,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "fd8cabafb56980528edb83a46206c404687fdaed0bdad7c450ae020143ae38bc"
@@ -613,5 +616,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
