--- a/notebooks/tutorial_azureai_openai.ipynb
+++ b/notebooks/tutorial_azureai_openai.ipynb
@@ -131,6 +131,8 @@
     "    \n",
     "    with assistant():\n",
     "        lm += gen(name='answer', max_tokens=500)\n",
+    "\n",
+    "    return lm\n",
     "                   \n",
     "azureai_model + experts(query='What is the meaning of life?')"
    ]
