--- a/notebooks/tutorial_azureai_openai.ipynb
+++ b/notebooks/tutorial_azureai_openai.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "61665201-12a8-4588-bb54-801a367c7535",
    "metadata": {},
    "outputs": [],
@@ -24,15 +24,18 @@
     "\n",
     "# This is the name of the model deployed, such as 'gpt-4' or 'gpt-35-turbo\n",
     "model = 'gpt-4'\n",
+    "\n",
     "# This is the deployment URL, as provided in the Azure AI playground ('view code'):\n",
     "azure_endpoint = os.getenv(\"AZUREAI_ENDPOINT\", \"Please set the endpoint\")\n",
+    "\n",
     "# The environment variable should be set to the API key from the Azure AI playground:\n",
     "api_key=os.getenv(\"AZUREAI_KEY\", \"Please set API key\")\n",
+    "\n",
     "# Alternatively, we can use Entra authentication\n",
-    "token_provider = get_bearer_token_provider(\n",
-    "    DefaultAzureCredential(),\n",
-    "    \"https://cognitiveservices.azure.com/.default\"\n",
-    ")"
+    "# token_provider = get_bearer_token_provider(\n",
+    "#     DefaultAzureCredential(),\n",
+    "#     \"https://cognitiveservices.azure.com/.default\"\n",
+    "# )"
    ]
   },
   {
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "29187b26-93bc-459f-bb9d-ac22feef473a",
    "metadata": {},
    "outputs": [],
@@ -56,9 +59,9 @@
     "    model=model,\n",
     "    azure_endpoint=azure_endpoint,\n",
     "    # For authentication, use either\n",
-    "    azure_ad_token_provider=token_provider,\n",
+    "    api_key=api_key\n",
     "    # or\n",
-    "    # api_key=api_key\n",
+    "    # azure_ad_token_provider=token_provider\n",
     ")"
    ]
   },
@@ -139,12 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b38ed2e8-ac20-4803-ae91-cc0fcde4248f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " "
+    " 1"
    ]
   }
  ],
