--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -244,7 +244,7 @@
    "source": [
     "## Function encapsulation\n",
     "\n",
-    "When you have a set of model operations you want to group together, you can place them into a custom guidance function. To do this you define a decorated python function that takes a model as the first positional argument and returns a new updated model. You can add this guidance function to a model to execute it, just like with the buil-in guidance functions like `gen`."
+    "When you have a set of model operations you want to group together, you can place them into a custom guidance function. To do this you define a decorated python function that takes a model as the first positional argument and returns a new updated model. You can add this guidance function to a model to execute it, just like with the built-in guidance functions like `gen`."
    ]
   },
   {
