fix token healing notebook

--- a/notebooks/guidance_acceleration.ipynb
+++ b/notebooks/guidance_acceleration.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eda53ec9edb44dc095111326690152b8",
+       "model_id": "560ce990c6484163aa19a2f37788dfeb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,7 +73,7 @@
    "source": [
     "model = 'mistralai/Mistral-7B-v0.1'\n",
     "device = 'cuda'\n",
-    "llm_gpt2_large_gpu = guidance.models.Transformers(model, device=device)"
+    "llm_gpt2_large_gpu = guidance.models.Transformers(model, device=device) # run on an A100 for the numbers below"
    ]
   },
   {
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With guidance acceleration and token healing: 3.880760431289673\n"
+      "With guidance acceleration and token healing: 3.9129340648651123\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Without guidance acceleration: 4.8638694286346436\n"
+      "Without guidance acceleration: 4.819199085235596\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Single generation call of same length: 20.724050045013428\n"
+      "Single generation call of same length: 20.686521768569946\n"
      ]
     }
    ],
