Clean up more notebooks/docs

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -320,7 +320,7 @@
    "source": [
     "import guidance\n",
     "\n",
-    "# define a resuable \"guidance function\" that we can use below\n",
+    "# define a re-usable \"guidance function\" that we can use below\n",
     "@guidance\n",
     "def quoted_list(lm, name, n):\n",
     "    for i in range(n):\n",
