--- a/notebooks/guaranteeing_valid_syntax.ipynb
+++ b/notebooks/guaranteeing_valid_syntax.ipynb
@@ -16,37 +16,33 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attempting to load /mnt/c/Users/riedgar/Downloads/llama-2-7b.Q5_K_M.gguf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "import guidance\n",
     "\n",
     "# define the model we will use\n",
-    "# MODEL_PATH should point at the gguf file which you wish to use\n",
-    "target_model_path = os.getenv(\"MODEL_PATH\")\n",
-    "print(f\"Attempting to load {target_model_path}\")\n",
-    "\n",
-    "lm = guidance.models.LlamaCpp(target_model_path, n_gpu_layers=-1)"
+    "lm = guidance.models.LlamaCpp(\"/home/scottlundberg_google_com/models/mistral-7b-v0.1.Q8_0.gguf\", n_gpu_layers=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style='margin: 0px; padding: 0px; padding-left: 8px; margin-left: -8px; border-radius: 0px; border-left: 1px solid rgba(127, 127, 127, 0.2); white-space: pre-wrap; font-family: ColfaxAI, Arial; font-size: 15px; line-height: 23px;'>{&quot;description&quot; : &quot;A quick and nimble fighter&quot;,&quot;name&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>B</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>lade</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;,</span>&quot;age&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>1</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>8</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>,</span>&quot;armour&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>le</span>ather<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;,</span>&quot;weapon&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>s</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>word</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;,</span>&quot;class&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>fig</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>h</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>ter</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;,</span>&quot;mantra&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>I</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'> am</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'> the</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'> bla</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>de</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>,</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'> the</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'> bla</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>de</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'> is</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'> me</span>.&quot;,&quot;strength&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>1</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>0</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>,</span>&quot;quest_items&quot; : [ <span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span>,<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>2</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span>,<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span><span style='background-color: rgba(165.0, 0.0, 0, 0.15); border-radius: 3px;' title='0.0'>3</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span>]}</pre>"
+       "<pre style='margin: 0px; padding: 0px; padding-left: 8px; margin-left: -8px; border-radius: 0px; border-left: 1px solid rgba(127, 127, 127, 0.2); white-space: pre-wrap; font-family: ColfaxAI, Arial; font-size: 15px; line-height: 23px;'>{\n",
+       "    &quot;description&quot; : &quot;A quick and nimble fighter&quot;,\n",
+       "    &quot;name&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>F</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>ighter</span>&quot;,\n",
+       "    &quot;age&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>2</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>0</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>,</span>\n",
+       "    &quot;armour&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>le</span>ather&quot;,\n",
+       "    &quot;weapon&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>sw</span>ord&quot;,\n",
+       "    &quot;class&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>fig</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>h</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>ter</span>&quot;,\n",
+       "    &quot;mantra&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> &quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>I</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> am</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> a</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> fighter</span>&quot;,\n",
+       "    &quot;strength&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>0</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>,</span>\n",
+       "    &quot;quest_items&quot; :<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> [</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>sw</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>ord</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span>, <span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>sh</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>ield</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span>, <span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>arm</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>our</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&quot;</span>]\n",
+       "<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>}</span></pre>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -61,37 +57,38 @@
     "\n",
     "# we can pre-define valid option sets\n",
     "sample_weapons = [\"sword\", \"axe\", \"mace\", \"spear\", \"bow\", \"crossbow\"]\n",
-    "sample_armour = [\"leather\", \"chainmail\", \"plate\"]\n",
+    "sample_armor = [\"leather\", \"chainmail\", \"plate\"]\n",
+    "\n",
+    "# define a re-usable \"guidance function\" that we can use below\n",
+    "@guidance\n",
+    "def quoted_list(lm, name, n):\n",
+    "    for i in range(n):\n",
+    "        if i > 0:\n",
+    "            lm += \", \"\n",
+    "        lm += '\"' + gen(name, list_append=True, stop='\"') + '\"'\n",
+    "    return lm\n",
     "\n",
     "@guidance\n",
     "def generate_character(\n",
-    "    llm,\n",
+    "    lm,\n",
     "    character_one_liner,\n",
     "    weapons: list[str] = sample_weapons,\n",
-    "    armour: list[str] = sample_armour,\n",
+    "    armour: list[str] = sample_armor,\n",
     "    n_items: int = 3\n",
     "):\n",
-    "    llm += \"{\"\n",
-    "    llm += f'\"description\" : \"{character_one_liner}\",'\n",
-    "    llm += '\"name\" : \"' + gen(name=\"character_name\", stop='\"') + '\",'\n",
-    "    # With guidance, we can call a GPU rather than merely random.randint()\n",
-    "    llm += '\"age\" : ' + gen(name=\"age\", regex=\"[0-9]+\") + ','\n",
-    "    llm += '\"armour\" : \"' + select(armour, name=\"armour\") + '\",'\n",
-    "    llm += '\"weapon\" : \"' + select(weapons, name=\"weapon\") + '\",'\n",
-    "    llm += '\"class\" : \"' + gen(name=\"character_class\", stop='\"') + '\",'\n",
-    "    llm += '\"mantra\" : \"' + gen(name=\"mantra\", stop='\"') + '\",'\n",
-    "    # Again, we can avoid calling random.randint() like a pleb\n",
-    "    llm += '\"strength\" : ' + gen(name=\"age\", regex=\"[0-9]+\") + ','\n",
-    "    llm += '\"quest_items\" : [ '\n",
-    "    for i in range(n_items):\n",
-    "        llm += '\"' + gen(name=\"items\", list_append=True, stop='\"') + '\"'  \n",
-    "        # We now pause a moment to express our thoughts on the JSON\n",
-    "        # specification's dislike of trailing commas\n",
-    "        if i < n_items - 1:\n",
-    "            llm += ','\n",
-    "    llm += \"]\"\n",
-    "    llm += \"}\"\n",
-    "    return llm\n",
+    "    lm += f'''\\\n",
+    "    {{\n",
+    "        \"description\" : \"{character_one_liner}\",\n",
+    "        \"name\" : \"{gen(\"character_name\", stop='\"')}\",\n",
+    "        \"age\" : {gen(\"age\", regex=\"[0-9]+\")},\n",
+    "        \"armour\" : \"{select(armour, name=\"armor\")}\",\n",
+    "        \"weapon\" : \"{select(weapons, name=\"weapon\")}\",\n",
+    "        \"class\" : \"{gen(\"character_class\", stop='\"')}\",\n",
+    "        \"mantra\" : \"{gen(\"mantra\", stop='\"')}\",\n",
+    "        \"strength\" : {gen(\"age\", regex=\"[0-9]+\")},\n",
+    "        \"quest_items\" : [{quoted_list(\"quest_items\", n_items)}]\n",
+    "    }}'''\n",
+    "    return lm\n",
     "\n",
     "\n",
     "generation = lm + generate_character(\"A quick and nimble fighter\")"
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,17 +113,17 @@
       "Loaded json:\n",
       "{\n",
       "    \"description\": \"A quick and nimble fighter\",\n",
-      "    \"name\": \"Blade\",\n",
-      "    \"age\": 18,\n",
+      "    \"name\": \"Fighter\",\n",
+      "    \"age\": 20,\n",
       "    \"armour\": \"leather\",\n",
       "    \"weapon\": \"sword\",\n",
       "    \"class\": \"fighter\",\n",
-      "    \"mantra\": \"I am the blade, the blade is me.\",\n",
+      "    \"mantra\": \"I am a fighter\",\n",
       "    \"strength\": 10,\n",
       "    \"quest_items\": [\n",
-      "        \"1\",\n",
-      "        \"2\",\n",
-      "        \"3\"\n",
+      "        \"sword\",\n",
+      "        \"shield\",\n",
+      "        \"armour\"\n",
       "    ]\n",
       "}\n"
      ]
@@ -149,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +155,7 @@
        "'sword'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
