--- a/notebooks/testing_lms.ipynb
+++ b/notebooks/testing_lms.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This post was written jointly by Marco Tulio Ribeiro and Scott Lundberg"
+    "This post was written jointly by Marco Tulio Ribeiro and Scott Lundberg.\n",
+    "\n",
+    "**NOTE! This notebook has not yet been updated to use the new `v0.1+` pythonic syntax. We are working through the notebooks still. (PRs are welcome)**"
    ]
   },
   {
