Re-enable documentation builds

--- a/notebooks/api_examples/models/AzureOpenAI.ipynb
+++ b/notebooks/api_examples/models/AzureOpenAI.ipynb
@@ -5,7 +5,7 @@
    "id": "882fb634-0efc-42bf-8cc5-79d6a7312e26",
    "metadata": {},
    "source": [
-    "# Using OpenAI models from Azure AI\n",
+    "# `AzureOpenAI` API Examples\n",
     "\n",
     "You can also use an OpenAI model deployed into Azure AI.\n",
     "For this, you will provide a few pieces of information from the Azure AI playground:"
