--- a/notebooks/art_of_prompt_design/react.ipynb
+++ b/notebooks/art_of_prompt_design/react.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Art of Prompt Design: ReAct Design Pattern\n",
+    "`The Art of Prompt Design`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ReAct Design Pattern\n",
     "\n",
     "*Authors: @Sam1320, @slundberg*\n",
     "\n",
@@ -212,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementing ReAct Directly Using Stateful Control <a id=\"raw_function\"></a>\n",
+    "## Implementing ReAct Directly Using Stateful Control <a id=\"raw_function\"></a>\n",
     "Instead of passing the tools as arguments to `gen` we can use stateful control to guide the execution of the program. This allows for more fine grained control. \n",
     "\n",
     "In this case we'll define a function that runs the ReAct loop. Note that now `select` constrains the model to select one of the available tools. Also, we don't need to add prefixes to the tools since all the context is finely controlled inside the loop."
