--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -5,12 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Art of Prompt Design: Use clear syntax\n",
+    "`The Art of Prompt Design`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use clear syntax\n",
     "\n",
     "This is the first installment of a series on how to use <a href=\"https://github.com/guidance-ai/guidance\">`guidance`</a> to control large language models (LLMs).\n",
     "We'll start from the basics and work our way up to more advanced topics.\n",
     "\n",
-    "In this post, we'll show that having **clear syntax** enables you to communicate your intent to the LLM, and also ensure that outputs are easy to parse (like JSON that is guaranteed to be valid). For the sake of clarity and reproducibility we'll start with an open source StableLM model without fine tuning. Then, we will show how the same ideas apply to instruction-tuned models like GPT-3.5 and chat-tuned models like ChatGPT / GPT-4."
+    "In this document, we'll show that having **clear syntax** enables you to communicate your intent to the LLM, and also ensure that outputs are easy to parse (like JSON that is guaranteed to be valid). For the sake of clarity and reproducibility we'll start with an open source StableLM model without fine tuning. Then, we will show how the same ideas apply to instruction-tuned models like GPT-3.5 and chat-tuned models like ChatGPT / GPT-4."
    ]
   },
   {
