--- a/notebooks/tutorials/regex_constraints.ipynb
+++ b/notebooks/tutorials/regex_constraints.ipynb
@@ -5,14 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pattern guides\n",
+    "# Regular expression constraints\n",
     "\n",
     "While you can specify any constraint you want with raw guidance functions/grammars, it is often useful to enforce very simple patterns on our `gen()` calls. To do this you can specify regular expression formats to which generated text must adhere. Internally these expressions are converted to native guidance grammars (set of guidance functions).\n",
     "\n",
     "## Example\n",
     "In the following example we know that we want to get number for the generated `chapter` variable, but GPT2 does not know that, and instead makes up something else.\n",
     "\n",
-    "### Invalid output without a pattern guide"
+    "### Invalid output without a regex guide"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Valid output with a pattern guide"
+    "### Valid output with a regex guide"
    ]
   },
   {
