--- a/notebooks/art_of_prompt_design/prompt_boundaries_and_token_healing.ipynb
+++ b/notebooks/art_of_prompt_design/prompt_boundaries_and_token_healing.ipynb
@@ -5,7 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Art of Prompt Design: Prompt Boundaries and Token Healing\n",
+    "`The Art of Prompt Design`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prompt Boundaries and Token Healing\n",
     "\n",
     "This (written jointly with <a href=\"https://medium.com/@marcotcr\">Marco Tulio Ribeiro</a>) is part 2 of a series on <b>the art of prompt design</b> (part 1 <a href=\"https://medium.com/towards-data-science/the-art-of-prompt-design-use-clear-syntax-4fc846c1ebd5\">here</a>), where we talk about controlling large language models (LLMs) with <a href=\"https://github.com/microsoft/guidance\">`guidance`</a>.\n",
     "\n",
